<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/emailAddressHelper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x2_size"
        android:text="@string/multiple_email_address_list"/>

    <EditText
        android:id="@+id/dialogEmailET"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dialogAddEmailBtn"
            android:text="@string/add_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/dialogCancelBtn"
            android:text="@string/cancel_adding_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/emailAddressToSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x2_size"
        android:text="@string/email_address_list"/>

    <Button
        android:id="@+id/dialogDoneBtn"
        android:text="@string/done_adding_email"
        android:layout_marginTop="@dimen/x3_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>



</LinearLayout>