<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorPrimary"
        android:text="@string/insert_title_here"
        android:layout_marginLeft="@dimen/x3_size"
        android:layout_marginRight="@dimen/x3_size"
        android:layout_marginTop="@dimen/x3_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/quoteTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/quote_text_size"
        android:textColor="@color/colorPrimary"
        android:text="@string/insert_quote_here"
        android:layout_marginLeft="@dimen/x3_size"
        android:layout_marginRight="@dimen/x3_size"
        android:layout_marginTop="@dimen/x3_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        />

    <TextView
        android:id="@+id/authorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="@dimen/author_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/insert_author_here"
        android:layout_marginLeft="@dimen/x3_size"
        android:layout_marginRight="@dimen/x3_size"
        android:layout_marginTop="@dimen/x3_size"
        app:layout_constraintTop_toBottomOf="@+id/quoteTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <Button
        android:id="@+id/getRandomQuoteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_new_random_quote"
        app:layout_constraintBottom_toTopOf="@id/emailQuoteBtn"
        android:layout_marginBottom="@dimen/x3_size"
        />

    <Button
        android:id="@+id/emailQuoteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_this_quote"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/x3_size"
        />


</androidx.constraintlayout.widget.ConstraintLayout>